# qt-chatbot-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  PROGRESS.md  README.md  TODO.md  test_mcp_integration.sh
debian/: changelog  control  copyright  install  qt-chatbot-agent.desktop  rules
docs/: ARCHITECTURE.md  DEBIAN_PACKAGE_GUIDE.md  MCP_SERVER_IMPLEMENTATION_PRD.md  MCP_TOOL_CALLING_GUIDE.md  PRD.md  QUICK_REFERENCE.md  RAG_GUIDE.md  TESTING_GUIDE.md  conversation-management.md  lemonade-backend.md  markdown-formatting-guide.md  mcp-stdio-server.md  mcp-testing.md  model-selection-feature.md  modern-chat-interface.md  recent-updates.md  status-bar-and-tools.md  system-prompt-configuration.md  tool-call-visualization.md
include/: CLIMode.h  ChatWindow.h  Config.h  ConversationManager.h  DiagnosticTests.h  HTMLHandler.h  LLMClient.h  LogViewerDialog.h  Logger.h  MCPHandler.h  MarkdownHandler.h  MessageRenderer.h  RAGEngine.h  RAGUIManager.h  SSEClient.h  SettingsDialog.h  TestMCPStdioServer.h  ThemeManager.h  ToolUIManager.h  version.h
src/: CLIMode.cpp  ChatWindow.cpp  Config.cpp  ConversationManager.cpp  DiagnosticTests.cpp  HTMLHandler.cpp  LLMClient.cpp  LogViewerDialog.cpp  Logger.cpp  MCPHandler.cpp  MarkdownHandler.cpp  MessageRenderer.cpp  RAGEngine.cpp  RAGUIManager.cpp  SSEClient.cpp  SettingsDialog.cpp  TestMCPStdioServer.cpp  ThemeManager.cpp  ToolUIManager.cpp  main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_mcp_server.cpp  test_mcphandler.cpp  test_ragengine.cpp  test_sseclient.cpp
